Name:          sawScript
Version:       0.1
Author:        Galois Inc.
Maintainer:    atomb@galois.com
Build-type:    Simple
Cabal-version: >= 1.8.0.2

library
  build-depends:
      base >= 4
--    , abcBridge
    , array
--    , cmdargs
    , containers
    , deepseq
    , either
    , directory
    , fgl
    , filepath
    , haskeline
    , jvm-parser
    , jvm-verifier
    , lens
    , llvm-pretty
    , llvm-verifier >= 0.2.1
    , mtl >= 2.1
    , old-locale
    , old-time
    , pretty
    , pretty-show
    , saw-core
    , smtLib
    , split
    , template-haskell
    , transformers
    , vector
    , Verinf
    , xdg-basedir
    , wl-pprint
    , GraphSCC

  hs-source-dirs: src

  exposed-modules:
    SAWScript.AST
    SAWScript.BuildModules
    SAWScript.Builtins
    SAWScript.CongruenceClosure
    SAWScript.Compiler
    SAWScript.FileQuote
    SAWScript.Import
    SAWScript.Interpreter
    SAWScript.JavaExpr
    SAWScript.Lexer
    SAWScript.LLVMExpr
    SAWScript.LLVMMethodSpec
    SAWScript.LLVMMethodSpecIR
    SAWScript.MethodSpec
    SAWScript.MethodSpecIR
    SAWScript.NewAST
    SAWScript.Options
    SAWScript.Parser
    SAWScript.ProcessFile
    SAWScript.Proof
    SAWScript.RenameRefs
    SAWScript.ResolveSyns
    SAWScript.REPL
    SAWScript.REPL.GenerateModule
    SAWScript.REPL.Monad
    SAWScript.Token
    SAWScript.MGU
    SAWScript.Unify
    SAWScript.Unify.Fix
    SAWScript.Unify.Fresh
    SAWScript.Unify.Goal
    SAWScript.Unify.Ops
    SAWScript.Unify.Unification
    SAWScript.Utils
    SAWScript.Value

  GHC-options: -O2 -Wall -fno-ignore-asserts -fno-spec-constr-count

  if os(darwin)
      GHC-options: -optl-Wl,-dead_strip

  build-tools: alex, happy

executable saw
  hs-source-dirs: .

  GHC-options: -O2 -Wall -fno-ignore-asserts -fno-spec-constr-count

  main-is: src/Main.hs

  build-depends:
      base >= 4
    , containers
    , directory
    , either
    , filepath
    , haskeline
    , QuickCheck
    , transformers
    , sawScript
    , saw-core
