Name:          sawScript
Version:       0.1
Author:        Galois Inc.
Maintainer:    atomb@galois.com
Build-type:    Simple
Cabal-version: >= 1.8.0.2

extra-source-files:
    prelude/Prelude.saw

library
  build-depends:
      base >= 4
    , abcBridge
    , aig
    , ansi-terminal
    , array
    , binary
    , bytestring
    , containers
    , cryptol
    , cryptol-verifier
    , deepseq
    , either
    , directory
    , fgl
    , filepath
    , haskeline
    , jvm-parser
    , jvm-verifier
    , lens
    , llvm-pretty
    , llvm-pretty-bc-parser
    , llvm-verifier >= 0.2.1
    , mtl >= 2.1
    , old-locale
    , old-time
    , pretty
    , pretty-show
    , process
    , saw-core
    , smtLib
    , split
    , template-haskell
    , transformers
    , vector
    , Verinf
    , xdg-basedir
    , wl-pprint
    , GraphSCC

  hs-source-dirs: src

  exposed-modules:
    SAWScript.AST
    SAWScript.BuildModules
    SAWScript.Builtins
    SAWScript.CongruenceClosure
    SAWScript.Compiler
    SAWScript.CryptolBuiltins
    SAWScript.FileQuote
    SAWScript.Import
    SAWScript.ImportAIG
    SAWScript.Interpreter
    SAWScript.JavaBuiltins
    SAWScript.JavaExpr
    SAWScript.JavaMethodSpec
    SAWScript.JavaMethodSpecIR
    SAWScript.Lexer
    SAWScript.LLVMBuiltins
    SAWScript.LLVMExpr
    SAWScript.LLVMMethodSpec
    SAWScript.LLVMMethodSpecIR
    SAWScript.NewAST
    SAWScript.Options
    SAWScript.Parser
    SAWScript.ProcessFile
    SAWScript.Proof
    SAWScript.RenameRefs
    SAWScript.ResolveSyns
    SAWScript.REPL
    SAWScript.REPL.Command
    SAWScript.REPL.GenerateModule
    SAWScript.REPL.Haskeline
    SAWScript.REPL.Logo
    SAWScript.REPL.Monad
    SAWScript.SBVParser
    SAWScript.SBVModel
    SAWScript.REPL.Trie
    SAWScript.Token
    SAWScript.MGU
    SAWScript.Unify
    SAWScript.Unify.Fix
    SAWScript.Unify.Fresh
    SAWScript.Unify.Goal
    SAWScript.Unify.Ops
    SAWScript.Unify.Unification
    SAWScript.Utils
    SAWScript.Value
    SAWScript.VerificationCheck

  GHC-options: -O2 -Wall -fno-ignore-asserts -fno-spec-constr-count

  build-tools: alex, happy

executable saw
  hs-source-dirs: .

  GHC-options: -O2 -Wall -fno-ignore-asserts -fno-spec-constr-count

  if os(darwin)
      GHC-options: -optl-Wl,-dead_strip

  main-is: src/Main.hs

  build-depends:
      base >= 4
    , containers
    , directory
    , either
    , filepath
    , haskeline
    , QuickCheck
    , transformers
    , sawScript
    , saw-core
