name:                crucible-mir-comp
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/GaloisInc/saw-script/blob/master/crucible-mir-comp/README.md
license:             BSD3
license-file:        LICENSE
author:              Joshua Gancher,
                     Rob Dockins,
                     Andrey Chudnov,
                     Stephanie Weirich,
                     Stuart Pernsteiner
maintainer:          spernsteiner@galois.com
copyright:           2017-2023 Galois, Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language: Haskell2010
  build-depends: base >= 4.9 && < 5,
                 text,
                 prettyprinter >= 1.7.0,
                 crucible,
                 parameterized-utils >= 1.0.8,
                 containers,
                 lens,
                 vector,
                 mtl,
                 what4,
                 bv-sized,
                 bytestring,
                 crucible-mir,
                 saw-core,
                 saw-core-what4,
                 cryptol-saw-core,
                 saw-script

  hs-source-dirs: src
  exposed-modules: Mir.Compositional.Builder
                   Mir.Compositional.Clobber
                   Mir.Compositional.Convert
                   Mir.Compositional.Override

  ghc-options: -Wall -Wno-name-shadowing
