cabal-version:       3.0
name:                crucible-mir-comp
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/GaloisInc/saw-script/blob/master/crucible-mir-comp/README.md
license:             BSD-3-Clause
license-file:        LICENSE
author:              Joshua Gancher,
                     Rob Dockins,
                     Andrey Chudnov,
                     Stephanie Weirich,
                     Stuart Pernsteiner
maintainer:          spernsteiner@galois.com
copyright:           2017-2023 Galois, Inc.
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  default-language: Haskell2010
  build-depends:
                 -- upstream packages from hackage
                 base >= 4.9 && < 5,
                 bytestring,
                 containers,
                 lens,
                 mtl,
                 prettyprinter >= 1.7.0,
                 text,
                 vector,

                 -- galois packages from hackage
                 bv-sized,

                 -- packages in git submodules
                 crucible,
                 crucible-mir,
                 parameterized-utils >= 1.0.8,
                 what4,

                 -- internal subpackages in the saw tree
                 saw-core,
                 saw-core-what4,
                 saw-script:cryptol-saw-core,
                 saw-script:saw-central

  hs-source-dirs: src
  exposed-modules: Mir.Compositional.Builder
                   Mir.Compositional.Clobber
                   Mir.Compositional.Convert
                   Mir.Compositional.Override

  ghc-options: -Wall -Wno-name-shadowing
