name:                crux-mir-comp
version:             0.4
-- synopsis:
-- description:
homepage:            https://github.com/GaloisInc/crucible/blob/master/crux-mir/README.md
license:             BSD3
license-file:        LICENSE
author:              Joshua Gancher,
                     Rob Dockins,
                     Andrey Chudnov,
                     Stephanie Weirich,
                     Stuart Pernsteiner
maintainer:          spernsteiner@galois.com
copyright:           2017-2023 Galois, Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language: Haskell2010
  build-depends: base >= 4.9 && < 5,
                 text,
                 extra,
                 crucible,
                 parameterized-utils >= 1.0.8,
                 containers,
                 lens,
                 what4,
                 bytestring,
                 crux,
                 crucible-mir,
                 crucible-mir-comp,
                 crux-mir,
                 saw-core,
                 saw-core-what4,
                 cryptol,
                 cryptol-saw-core

  hs-source-dirs: src
  exposed-modules: Mir.Compositional
                   Mir.Cryptol
  other-modules:   Mir.Compositional.DefId

  ghc-options: -Wall -Wno-name-shadowing


executable crux-mir-comp
  hs-source-dirs: exe
  main-is: Main.hs

  build-depends:
                base >= 4.7 && < 5,
                crux-mir-comp,
                text,
                crucible,
                parameterized-utils >= 1.0.8,
                containers,
                lens,
                vector,
                mtl,
                transformers,
                what4,
                tasty            >= 0.10,
                tasty-hunit      >= 0.10,
                tasty-quickcheck >= 0.8,
                tasty-golden     >= 2.3,
                crux,
                crux-mir,
                template-haskell

  ghc-options: -Wall -threaded
  ghc-prof-options: -O2 -fprof-auto-top
  default-language: Haskell2010


test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  ghc-options: -Wall -threaded
  ghc-prof-options: -fprof-auto -O2

  main-is: Test.hs

  build-depends:
                base             >= 4.7,
                containers,
                deepseq,
                directory,
                filepath,
                parsec,
                process,
                crux-mir,
                crux-mir-comp,
                QuickCheck,
                tasty            >= 0.10,
                tasty-hunit      >= 0.10,
                tasty-quickcheck >= 0.8,
                tasty-golden     >= 2.3,
                tasty-expected-failure >= 0.11,
                temporary        >= 1.3,
                aig,
                crux,
                crucible,
                config-schema,
                config-value,
                bytestring,
                regex-base,
                regex-posix,
                utf8-string

  default-language: Haskell2010
