Name:              cryptol-saw-core
Version:           0.1
Author:            Galois, Inc.
License:           BSD3
License-file:      LICENSE
Maintainer:        huffman@galois.com
Copyright:         (c) 2014 Galois Inc.
Build-type:        Simple
cabal-version:     >= 1.10
Category:          Formal Methods
Synopsis:          Representing Cryptol in SAWCore
Description:
  Translate Cryptol syntax into SAWCore terms, which can then
  be analysed by various backend proof systems.

extra-source-files:
    saw/Cryptol.sawcore

library
  build-depends:
    aig,
    array,
    base,
    base-compat,
    bytestring,
    containers,
    cryptol >= 2.3.0,
    data-inttrie >= 0.1.4,
    integer-gmp,
    modern-uri,
    panic,
    saw-core,
    saw-core-aig,
    saw-core-sbv,
    saw-core-what4,
    what4,
    sbv,
    vector,
    text,
    executable-path,
    filepath
  hs-source-dirs: src
  exposed-modules:
     Verifier.SAW.Cryptol
     Verifier.SAW.Cryptol.Panic
     Verifier.SAW.Cryptol.Prelude
     Verifier.SAW.Cryptol.Simpset
     Verifier.SAW.CryptolEnv
     Verifier.SAW.TypedTerm
  GHC-options: -Wall -Werror

executable css
  other-modules:
    Paths_cryptol_saw_core

  build-depends:
    aig,
    array,
    base,
    bytestring,
    containers,
    cryptol,
    saw-core,
    saw-core-aig,
    text,
    cryptol-saw-core

  hs-source-dirs : css
  main-is : Main.hs
  GHC-options: -Wall -O2 -rtsopts -pgmlc++
  extra-libraries:      stdc++

test-suite cryptol-saw-core-tc-test
  type: exitcode-stdio-1.0
  default-language: Haskell2010

  hs-source-dirs: test
  main-is: CryptolVerifierTC.hs

  build-depends:
    base,
    bytestring,
    containers,
    cryptol,
    cryptol-saw-core,
    heredoc >= 0.2,
    saw-core
